--- a/src/views/guest.html
+++ b/src/views/guest.html
@@ -725,7 +725,7 @@
 
     <!-- HEADER -->
     <div class="mdl-grid header">
-      <div class="mdl-cell mdl-cell--1-col guest-player">
+      <div class="mdl-cell mdl-cell--1-col mdl-center">
         <b>Player #</b>
       </div>
       <div class="mdl-cell mdl-cell--1-col">
@@ -737,7 +737,7 @@
       <div class="mdl-cell mdl-cell--2-col">
         <b>Height</b>
       </div>
-      <div class="mdl-cell mdl-cell--2-col">
+      <div class="mdl-cell mdl-cell--1-col">
         <b>Gender</b>
       </div>
     </div>
@@ -745,7 +745,7 @@
 
     <!-- PLAYER 1 -->
     <div class="mdl-grid player">
-      <div class="mdl-cell mdl-cell--1-col guest-player">
+      <div class="mdl-cell mdl-cell--1-col mdl-center">
         1
       </div>
       <div class="mdl-cell mdl-cell--1-col">
@@ -765,7 +765,7 @@
           <option value=""></option>
         </select>
       </div>
-      <div class="mdl-cell mdl-cell--2-col">
+      <div class="mdl-cell mdl-cell--1-col">
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="player1-option-1">
           <input type="radio" id="player1-option-1" class="mdl-radio__button" name="options1" value="1" checked>
           <span class="mdl-radio__label">Male</span>
@@ -785,14 +785,14 @@
       </div>
       <div class="mdl-cell mdl-cell--2-col" id="player1-height">
       </div>
-      <div class="mdl-cell mdl-cell--2-col" id="player1-gender">
+      <div class="mdl-cell mdl-cell--1-col" id="player1-gender">
       </div>
     </div>
     <!-- END PLAYER -->
 
     <!-- PLAYER 2 -->
     <div class="mdl-grid player">
-      <div class="mdl-cell mdl-cell--1-col guest-player">
+      <div class="mdl-cell mdl-cell--1-col mdl-center">
         2
       </div>
       <div class="mdl-cell mdl-cell--1-col">
@@ -812,7 +812,7 @@
           <option value=""></option>
         </select>
       </div>
-      <div class="mdl-cell mdl-cell--2-col">
+      <div class="mdl-cell mdl-cell--1-col">
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="player2-option-1">
           <input type="radio" id="player2-option-1" class="mdl-radio__button" name="options2" value="1" checked>
           <span class="mdl-radio__label">Male</span>
@@ -832,14 +832,14 @@
       </div>
       <div class="mdl-cell mdl-cell--2-col" id="player2-height">
       </div>
-      <div class="mdl-cell mdl-cell--2-col" id="player2-gender">
+      <div class="mdl-cell mdl-cell--1-col" id="player2-gender">
       </div>
     </div>
     <!-- END PLAYER -->
 
     <!-- PLAYER 3-->
     <div class="mdl-grid player">
-      <div class="mdl-cell mdl-cell--1-col guest-player">
+      <div class="mdl-cell mdl-cell--1-col mdl-center">
         3
       </div>
       <div class="mdl-cell mdl-cell--1-col">
@@ -859,7 +859,7 @@
           <option value=""></option>
         </select>
       </div>
-      <div class="mdl-cell mdl-cell--2-col">
+      <div class="mdl-cell mdl-cell--1-col">
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="player3-option-1">
           <input type="radio" id="player3-option-1" class="mdl-radio__button" name="options3" value="1" checked>
           <span class="mdl-radio__label">Male</span>
@@ -879,14 +879,14 @@
       </div>
       <div class="mdl-cell mdl-cell--2-col" id="player3-height">
       </div>
-      <div class="mdl-cell mdl-cell--2-col" id="player3-gender">
+      <div class="mdl-cell mdl-cell--1-col" id="player3-gender">
       </div>
     </div>
     <!-- END PLAYER -->
 
     <!-- PLAYER 4-->
     <div class="mdl-grid player">
-      <div class="mdl-cell mdl-cell--1-col guest-player">
+      <div class="mdl-cell mdl-cell--1-col mdl-center">
         4
       </div>
       <div class="mdl-cell mdl-cell--1-col">
@@ -906,7 +906,7 @@
           <option value=""></option>
         </select>
       </div>
-      <div class="mdl-cell mdl-cell--2-col">
+      <div class="mdl-cell mdl-cell--1-col">
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="player4-option-1">
           <input type="radio" id="player4-option-1" class="mdl-radio__button" name="options4" value="1" checked>
           <span class="mdl-radio__label">Male</span>
@@ -926,15 +926,33 @@
       </div>
       <div class="mdl-cell mdl-cell--2-col" id="player4-height">
       </div>
-      <div class="mdl-cell mdl-cell--2-col" id="player4-gender">
+      <div class="mdl-cell mdl-cell--1-col" id="player4-gender">
       </div>
     </div>
     <!-- END PLAYER -->
 
-    <br>
+    <div class="mdl-grid player">
+      <div class="mdl-cell mdl-cell--12-col mdl-center">
+        <button id="refresh" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
+          Submit
+        </button>
+      </div>
+    </div>
 
-    <button id="refresh" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent scenebutton">
-      Submit
-    </button>
+    <div class="mdl-grid player mdl-table">
+      <div class="mdl-cell mdl-cell--12-col mdl-table-row">
+        <div class="mdl-table-cell">
+          <h4>Ready</h4>
+        </div>
+      </div>
+      <div class="mdl-cell mdl-cell--12-col mdl-table-row mdl-switch-custom">
+        <div class="mdl-table-cell">
+          <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-ready">
+            <input type="checkbox" id="switch-ready" class="mdl-switch__input" >
+            <span class="mdl-switch__label"></span>
+          </label>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
